# routes/index.js
@@ -2,9 +2,11 @@
 const express = require("express");
 const router = express.Router();
 const books = require("./books");
+const authors = require("./authors");
 
 /* Route */
 router.use("/books", books);
+router.use("/authors", authors);
 
 /* Export */
 module.exports = router;
